# reflexion

./: .gitignore  LICENSE  Makefile  README.md  cursorrules.md  database-schema.md  demo-mode.md  demo-script.md  hackathon-context.md  hackathon-intel.md  prd.md  project-context.md  pyproject.toml  sponsor-integration.md  tech-stack.md
.gemini/: settings.json
agent/: .env.example  __init__.py  demo_data.py  evaluation.py  instrumentation.py  main.py  pyproject.toml  reflexion.py  server.py  tools.py
dashboard/: package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: AgentChat.tsx  ImprovementTimeline.tsx  QualityChart.tsx  StatsCards.tsx
