[project]
name = "reflexion"
version = "0.1.0"
description = "A self-improving AI agent powered by Gemini 3 and Arize Phoenix"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "google-adk>=0.1.0",
    "google-genai>=1.0.0",
    "arize-phoenix>=4.0.0",
    "openinference-instrumentation-google-adk>=0.1.0",
    "phoenix-otel>=0.1.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
    "sqlite-utils>=3.36",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
